2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  Add gettext as buildrequires because intltool doesn't pull it in.

2008-07-21  Pedro Gracia  <pedro@flumotion.com>

	* flumotion/common/i18n.py:
	* flumotion/test/test_i18n.py:
	Return untranslated strings (singular and plural) 
	with or without arguments ok.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	added the multilanguage label.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	removed the multilanguage label.

2008-07-21  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/vfs.py:
	* flumotion/test/test_common_vfs.py:
	simplify imports, try to instantiate a directory to see
	if we get an import error or not, since this all changed
	due to pychecker, sigh.

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	Added pygtk2-libglade and python-dateutil packages.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	Add keepgoing and move the imports to scopes, this should
	fix buildbot on machines which lacks gnomevfs or gio

2008-07-21  Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion.spec.in:
	Added python-twisted-conch and python-iCalendar as Requires and
        BuildRequires.

2008-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/errors.py:
	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	Remove MissingDependencyError in favor of just ImportError.

2008-07-21  johan dahlin  <johan@flumotion.com>

	* data/glade/ondemand-wizard.glade:
	* flumotion/common/Makefile.am:
	* flumotion/common/errors.py:
	* flumotion/common/interfaces.py:
	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/configure/configure.py:
	* flumotion/manager/worker.py:
	* flumotion/test/Makefile.am: