@@ -1,3 +1,9 @@
+2008-07-22  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/admin/gtk/componentlist.py:
+	* flumotion/common/pygobject.py:
+	Remove with_construct_properties and the last remaining callsite
+
 2008-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion.spec.in:
